<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewAlarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/buttonSnooze5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snooze_5_minutes"
        android:layout_below="@id/textViewAlarmTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/buttonSnooze10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snooze_10_minutes"
        android:layout_below="@id/buttonSnooze5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/buttonSnooze15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snooze_15_minutes"
        android:layout_below="@id/buttonSnooze10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_below="@id/buttonSnooze15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />
</RelativeLayout>